# archledger

./: .archledger.toml  .codecrate.toml  .gitignore  .pre-commit-config.yaml  .specweave.toml  .taskledger.toml  ARCHITECTURE.md  CHANGELOG.md  README.md  pyproject.toml  setup.py  specmason.toml
.archledger/: document-state.json  source-state.json  storage.yaml
.archledger/sections/: 01_introduction_and_goals.md  02_architecture_constraints.md  03_context_and_scope.md  04_solution_strategy.md  05_building_block_view.md  06_runtime_view.md  07_deployment_view.md  08_cross_cutting_concepts.md  09_architecture_decisions.md  10_quality_requirements.md  11_risks_and_technical_debt.md  12_glossary.md  al_0001.md  al_0002.md  al_0003.md  al_0004.md  al_0005.md  al_0006.md  al_0007.md  al_0008.md  al_0009.md  (+10 more)
.ledger/: ledger.toml  ledger.toml.bak
archledger/: __init__.py  assembly.py  checks.py  cli.py  cli_formatting.py  cli_options.py  cli_payloads.py  combo_trace.py  context.py  conversion_plan.py  converters.py  diagrams.py  document_state.py  errors.py  formats.py  id_format_drift.py  id_segments.py  identity_detection.py  identity_migration.py  ids.py  installers.py  jsonschemas.py  launcher.py  ledger_sequence.py  ledgercore_backend.py  links.py  metadata_migration.py  metadata_version.py  migration.py  model.py  mutations.py  profiles.py  project_context.py  project_init.py  project_manifest.py  project_migration.py  record_types.py  render.py  renumber.py  repository.py  (+11 more)
docs/: agent-workflow.md  agent-workflow.rst  api.md  bdd-gherkin.rst  build-and-export.md  build-and-export.rst  build.sh  cli.md  cli.rst  conf.py  configuration.md  configuration.rst  index.md  index.rst  release-process.md  release-process.rst  sdd.rst  source-model.md  source-model.rst  source-tracking.md  source-tracking.rst
tests/: test_bdd_checks.py  test_bdd_export_cli.py  test_bdd_exporter_unit.py  test_bdd_gherkin.py  test_bdd_import_cli.py  test_bdd_inspect_unit.py  test_bdd_list_cli.py  test_bdd_metadata.py  test_bdd_paths.py  test_bdd_sync_cli.py  test_bdd_sync_unit.py  test_bdd_validate_cli.py  test_bdd_validate_unit.py  test_build.py  test_build_formats.py  test_canonical_init.py  test_check_cli.py  test_combo_trace.py  test_context_cli.py  test_converter_integration.py  test_diagrams.py  test_direct_sibling_storage.py  test_frontmatter.py  test_identity_migration_cli.py  test_ids.py  test_import_boundaries.py  test_init_cli.py  test_links.py  test_metadata_migration_cli.py  test_metadata_version.py  test_migration.py  test_mutation_cli.py  test_packaging_metadata.py  test_paths.py  test_profile_cli.py  test_project_context.py  test_project_migration.py  test_read_cli.py  test_refactoring_regression.py  test_renumber_cli.py  (+12 more)
tools/: migrate_archledger_fixture_ids.py
(+817 files in other folders)
