[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["archledger*"]

[tool.setuptools.package-data]
archledger = [
    "py.typed",
    "templates/*.adoc.j2",
    "templates/*.md.j2",
    "templates/records/*.adoc.j2",
    "templates/records/*.md.j2",
]

[tool.pytest.ini_options]
addopts = "--strict-markers"
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "cli: exercises the Typer CLI surface",
    "integration: exercises multiple archledger layers or a full lifecycle",
    "slow: intentionally slower than normal unit tests",
]

[project]
name = "archledger"
description = "Markdown-first architecture documentation ledger for arc42-style documents"
authors = [{name = "Archledger Contributors"}]
maintainers = [{name = "Holger Nahrstaedt"}]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
keywords = ["arc42", "architecture", "cli", "developer-tools", "documentation"]
dependencies = [
    "typer",
    "PyYAML",
    "Jinja2>=3.1",
    'tomli; python_version < "3.11"',
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

dynamic=["version"]

[project.scripts]
archledger = "archledger.launcher:main"

[project.urls]
Homepage = "https://github.com/holgern/archledger"
Repository = "https://github.com/holgern/archledger"
Issues = "https://github.com/holgern/archledger/issues"
Changelog = "https://github.com/holgern/archledger/releases"

[project.optional-dependencies]
dev = [
    "build",
    "mypy",
    "pytest",
    "pytest-xdist",
    "ruff",
    "twine",
    "types-PyYAML",
]
rich = [
    "rich",
]

[tool.setuptools_scm]
write_to = "archledger/_version.py"

[tool.tox]
legacy_tox_ini = """

[testenv]
deps =
    pytest
    pytest-cov[all]
commands =
    pytest -p no:odoo
"""

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
exclude = [
]
